[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softnexis-git"
version = "1.0.0"
description = "Production-ready, async, typed GitHub API client wrapper for Softnexis evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
[tool.hatch.build.targets.wheel]
packages = ["Asynchronous_api_Wrapper_Library"]